refactor: change abstraction